admin_section_almost_complete

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/file-input": "^7.0.1",
     "@angular/animations": "~13.0.0",
     "@angular/cdk": "^13.2.4",
     "@angular/common": "~13.0.0",
@@ -24,6 +25,7 @@
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "ngx-cookie-service": "^13.1.2",
+    "ngx-toastr": "^14.2.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
