--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "ngx-cookie-service": "^13.1.2",
+    "ngx-pagination": "^6.0.1",
     "ngx-toastr": "^14.2.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
